--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "coverage": "solidity-coverage",
     "lint": "solhint contracts/*",
     "build": "truffle compile",
-    "flat": "truffle-flattener contracts/AnyNFTToken.sol > ./Flat.sol"
+    "flat": "truffle-flattener contracts/AnyToken.sol > ./Flat.sol"
   },
   "author": "kabl",
   "license": "MIT",
